  through this under load, and speeding up connection).
- IRCd now also sets the &me fd as being non blocking (wasn't before, that
  was odd..)
- Added set::ssl::server-cipher-list, #002368 requested by Beastie
- Added set::ssl::renegotiate-bytes, set::ssl:renegotiate-timeout, #0002971
  suggested by tabrisnet. Gets activated when >0. Please set sane values.
- Added set::ssl::dh to indicate DH parameters. These are needed to support
  DSA certificates and should probably make them work from now on. Code
  originally by the inspircd team.
- Fixed a number of compile errors/runtime errors on win32 (also a SSL
  brainfart regarding DH), #0003345, patched by fez
- #0003350 - reported by aquanight regarding ./unreal restart not 
  working in 3.3*. Now works properly again.
- #0001924 - requested by syzop: Added ./unreal gencloak, which generates
  random keys 10 ~ 20 characters in length (doesn't (yet) work for Win32).
- Misc fix for disabling extban chains, should've done stuff in our autoconf
  stuff instead of hacking configure directly :P .
- #0002833 reported and patched by tabrisnet, implementing UHNAMES
- #0003156 reported by Bricker: Made ./unreal dump some nicer errors eg
  "UnrealIRCd is not running" as opposed to "kill: 3426: no such process" etc.
- #0003368 patched by Stealth giving users access to do /module on remote
  servers
- #0002677 reported by aquanight, removing listen::options::remoteadmin, 
  listen::options::mask, set::options::no-stealth
- Adding Velcro (the build system from unreal4), for some experimentation
  with a new module API. Is currently not autoconf'ied, makefile'ed, etc.
  May the screaming commence.
- Changed Velcro/build script to fix a bug
- Changed Velcro/build to actually be able to compile to get included into
  u3 space
- Patched #002531 by Stealth, removing /stats H
- Fixed a bug introduced by another patch that caused log files to be 
  created without any permissions